// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote renders correctly 1`] = `
<blockquote
  className="u-blockquote"
>
  <div
    className="u-blockquote__body"
  >
    lorem ipsum dolor
  </div>
  <footer
    className="u-blockquote__footer"
  >
    ~ Greg
  </footer>
</blockquote>
`;

exports[`Blockquote renders correctly without a footer 1`] = `
<blockquote
  className="u-blockquote"
>
  <div
    className="u-blockquote__body"
  >
    lorem ipsum dolor
  </div>
</blockquote>
`;
